# sandwich-bot-2

./: .gitignore  README.md  docker-compose.yml
demos/: README.md
demos/box_picker/: README.md
demos/docker/: README.md
demos/visual_slam/: README.md
docker/sandwich_bot_2_0_control/: Dockerfile  entrypoint.sh
docker/sandwich_bot_2_0_ign_simulation/: Dockerfile  entrypoint.sh
sandwich_bot_2_0_control/: CMakeLists.txt  package.xml
sandwich_bot_2_0_control/behaviour_trees/: pick_coloured_boxes_behaviour_tree.xml
sandwich_bot_2_0_control/config/: ekf.yaml  exploration_params.yaml  nav2_params.yaml  rtabmap.yaml
sandwich_bot_2_0_control/launch/: action_servers.py  box_picker_start.py  controllers.py  robot_state_publisher.py  rrt_exploration.py  visual_slam_start.py
sandwich_bot_2_0_control/launch/navigation/: nav2_bringup_launch.py  nav2_localization_launch.py  nav2_navigation_launch.py  nav2_slam_launch.py
sandwich_bot_2_0_control/scripts/: boundary_publisher.py  box_picker.py  nav_to_pose_demo.py  robot_navigator.py
sandwich_bot_2_0_control/src/: box_picker.cc  box_pickup_pose_publisher.cc  find_coloured_box_action_server.cc  lidar_camera_fusion.cc  pick_coloured_box_action_server.cc  velocity_smoother.cc
sandwich_bot_2_0_control/src/bt_plugins/: approach_coloured_box.cc  find_coloured_box.cc  pick_coloured_box.cc
sandwich_bot_2_0_control/src/rrt_exploration/: assigner.cc  filter.cc  global_rrt.cc  local_rrt.cc  mean_shift.cc  robot.cc  utils.cc
sandwich_bot_2_0_control/src/rrt_exploration/include/: mean_shift.h  mtrand.h  robot.hpp  utils.h
sandwich_bot_2_0_description/: CMakeLists.txt  package.xml
sandwich_bot_2_0_description/config/: controller_manager.yaml
sandwich_bot_2_0_description/meshes/: stereo_camera.stl
sandwich_bot_2_0_description/urdf/: sandwich_bot.gazebo  sandwich_bot.xacro
sandwich_bot_2_0_desktop/: CMakeLists.txt  package.xml
sandwich_bot_2_0_desktop/config/rtabmapviz/: rtabmapviz.yaml
sandwich_bot_2_0_desktop/config/rviz/: config.rviz
sandwich_bot_2_0_desktop/launch/: box_picking_start.launch.py  visual_slam_start.launch.py
sandwich_bot_2_0_ign_simulation/: CMakeLists.txt  package.xml
sandwich_bot_2_0_ign_simulation/config/: gui.config  shapes_spawner.yaml
sandwich_bot_2_0_ign_simulation/launch/: launch_world.py  main_launch.py  spawn_bot.py
sandwich_bot_2_0_ign_simulation/models/Depot/: model.config  model.sdf
sandwich_bot_2_0_ign_simulation/models/Depot/materials/scripts/: model.material
sandwich_bot_2_0_ign_simulation/models/Depot/meshes/: Crates.dae
sandwich_bot_2_0_ign_simulation/models/house/: model.sdf
sandwich_bot_2_0_ign_simulation/models/house_modified/: model.config  model.sdf
sandwich_bot_2_0_ign_simulation/models/templates/: simple_box.xacro  simple_cylinder.xacro  simple_shapes.gazebo  simple_sphere.xacro
sandwich_bot_2_0_ign_simulation/scripts/: shapes_spawner.py
sandwich_bot_2_0_ign_simulation/src/: shape_deleter.cc
sandwich_bot_2_0_ign_simulation/worlds/: depot.world  empty.world  house.world  house_modified.world  lab.world  playground.world
sandwich_bot_2_0_interfaces/: CMakeLists.txt  package.xml
sandwich_bot_2_0_interfaces/action/: ChangePosition.action  FindColouredBox.action  PickColouredBox.action
sandwich_bot_2_0_interfaces/srv/: DeleteShape.srv
