<?xml version="1.0"?>
<package format="3">
  <name>sandwich_bot_2_0_control</name>
  <version>0.0.0</version>
  <description>The sandwich_bot_2_0_control package</description>

  <maintainer email="rushikesh.halle@thoughtworks.com">Rushikesh Halle</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>filters</depend>
  <depend>geometry_msgs</depend>
  <depend>sandwich_bot_2_0_interfaces</depend>
  <depend>sandwich_bot_2_0_description</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_util</depend>
  <depend>xacro</depend>
  <depend>image_proc</depend>
  <depend>stereo_image_proc</depend>

  <exec_depend>navigation2</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
