<?xml version="1.0"?>
<package format="2">
  <name>sandwich_bot_2_0_description</name>
  <version>0.0.0</version>
  <description>The sandwich_bot_2_0_description package</description>

  <maintainer email="rushikesh.halle@thoughtworks.com">Rushikesh Halle</maintainer>

  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
