<?xml version="1.0"?>
<package format="2">
  <name>sandwich_bot_2_0_ign_simulation</name>
  <version>0.0.0</version>
  <description>The sandwich_bot_2_0_ign_simulation package</description>

  <maintainer email="rushikesh.halle@thoughtworks.com">Rushikesh Halle</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros_ign</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <!-- <exec_depend>ign_ros2_control</exec_depend> -->
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>sandwich_bot_2_0_description</exec_depend>
  <exec_depend>ignition-gazebo3</exec_depend>
  <exec_depend>sandwich_bot_2_0_interfaces</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>