<?xml version="1.0"?>
<package format="3">
  <name>sandwich_bot_2_0_interfaces</name>
  <version>0.0.0</version>
  <description>The sandwich_bot_2_0_interfaces package</description>

  <maintainer email="rushikesh.halle@thoughtworks.com">Rushikesh Halle</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
